--- a/LogisticRegression/logisticRegressionBayes.ipynb
+++ b/LogisticRegression/logisticRegressionBayes.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\FURKAN\\Downloads\\archive (3)\\diabetes.csv\")"
+    "df = pd.read_csv(r\"diabetes.csv\")"
    ]
   },
   {
