--- a/LogisticRegression/logisticRegressionScikitLearn.ipynb
+++ b/LogisticRegression/logisticRegressionScikitLearn.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\FURKAN\\Downloads\\archive (3)\\diabetes.csv\")\n",
+    "df = pd.read_csv(r\"diabetes.csv\")\n",
     "\n",
     "X = df.drop(columns=[\"Outcome\"])\n",
     "y = df[\"Outcome\"]\n",
